# Shortdee

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  CLAUDE.md  README.md  commands.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/ai/: Dockerfile  README.md  pyproject.toml
apps/ai/app/: __init__.py  config.py  main.py
apps/ai/app/models/: schemas.py
apps/ai/app/prompts/: commerce_moments.py
apps/ai/app/routers/: analyze.py  classify.py  health.py  transcribe.py
apps/ai/app/services/: audio_analyzer.py  gemini_service.py  moment_classifier.py  visual_analyzer.py  whisper_service.py
apps/ai/tests/: test_health.py
apps/api/: package.json  tsup.config.ts
apps/api/src/: app.ts  server.ts
apps/api/src/lib/: env.ts  errors.ts  queue.ts  r2.ts  supabase.ts  tiktok.ts
apps/api/src/middleware/: auth.ts  rate-limit.ts
apps/api/src/plugins/: .gitkeep
apps/api/src/routes/: auth.ts  clips.ts  health.ts  integrations.ts  jobs.ts  lives.ts  webhooks.ts
apps/api/src/services/: .gitkeep
apps/api/src/types/: fastify.d.ts
apps/web/: eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(marketing)/: page.tsx
apps/web/src/lib/: utils.ts
apps/web/src/stores/: .gitkeep
docs/: api.md  architecture.md  commerce-moments.md  deployment.md
infra/: docker-compose.yml
infra/coolify/: .gitkeep
infra/scripts/: .gitkeep
workers/publisher/: Dockerfile  package.json  tsconfig.json
workers/publisher/src/: facebook.ts  index.ts  publish.ts  tiktok.ts  youtube.ts
workers/publisher/src/lib/: env.ts  r2.ts
workers/video-processor/: Dockerfile  package.json
workers/video-processor/src/: caption.ts  cut-clips.ts  detect-moments.ts  finalize.ts  index.ts  pipeline.ts  preprocess.ts  reframe.ts  transcribe.ts  upload.ts
workers/video-processor/src/lib/: ai.ts  caption.ts  clip.ts  env.ts  ffmpeg.ts  r2.ts  transcript.ts
(+19 files in other folders)
