[project]
name = "clipdee-ai"
version = "0.1.0"
description = "ClipDee AI service — transcription, Commerce Moment detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Heavy ML deps — install only when implementing Phase 4:
#   pip install -e ".[ml]"
ml = [
    "google-genai>=0.8.0",
    "openai-whisper>=20240930",
    "openai>=1.50.0",
    "librosa>=0.10.2",
    "numpy>=1.26.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
